--- a/style.css
+++ b/style.css
@@ -1,54 +1,76 @@
 
+@media only screen and (max-width: 1480px){
 .attribution { 
   font-size: 11px; text-align: center; 
 }
 .attribution a { 
   color: hsl(228, 45%, 44%); 
 }
+
+
+
 body{
 background-color:  hsl(233, 47%, 7%);
+font-family: 'Inter', sans-serif;
+font-family: 'Lexend Deca', sans-serif;
 }
 
 .container{
+  font-size: 15px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color:  hsl(244, 38%, 16%);
-  margin-top: 10%;
-  margin-left: 12.5%;
-  margin-right: 12.5%;
+  justify-content: center;
+  background-color:  hsl(244, 38%, 16%); 
+  margin: 100px;
+  border-radius: 10px;
 }
-.info{
 
+.left{
     color: hsl(0, 0%, 100%);
-    display: flex;
-    flex-wrap: wrap;
-    
+    margin: 0 auto;
 }
+
+.heading{
+font-size: 35px;
+line-height: 5px;
+ 
+ }
 
 p{
   color: hsla(0, 0%, 100%, 0.75);
+  line-height: 7px;
 }
 
 .underneath{
   color: hsla(0, 0%, 100%, 0.6);
   display: flex;
   flex-direction: row;
+  font-size: 12px;
+  text-transform:uppercase;
 }
 
 .stats{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  line-height: 10px;
+  padding-left: 20px;
+ margin-top: 75px; 
+ list-style: none; 
+ padding:0; 
+ 
+}
+.image{
+  background-color: hsl(277, 64%, 61%); 
+  background-size: cover;
+  border-bottom-right-radius: 10px;
+border-top-right-radius: 10px;
 }
 img{
-opacity: .5;
-vertical-align: middle;
-
-}
-
-.overlay{
-  background: hsl(277, 64%, 61%);
+display: flex;
+border-bottom-right-radius: 10px;
+border-top-right-radius: 10px;
+mix-blend-mode: multiply;
+opacity: .75;
 }
 
 ul{
@@ -57,4 +79,7 @@ ul{
 
 .purple{
   color: hsl(277, 64%, 61%);
+}
+
+
 }
