--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 
-@media only screen and (max-width: 1480px){
+
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .attribution { 
   font-size: 11px; text-align: center; 
 }
@@ -18,31 +25,29 @@ font-family: 'Inter', sans-serif;
 .container{
   font-size: 15px;
   display: flex;
-  align-items: center;
-  justify-content: center;
   background-color:  hsl(244, 38%, 16%); 
-  margin: 150px;
+  margin: 150px auto;
+  width: 80%;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .left{
     color: hsl(0, 0%, 100%);
-    margin: 0 auto;
+    flex-basis: 55%;
+    padding: 64px;
+    padding-right: 128px;
 }
 
-.heading1,.heading2{
+.heading1{
 font-size: 35px;
-line-height: 5px;
- }
-
- .heading2{
-  padding-bottom: 20px;
+margin-bottom: 24px;
  }
 
 p{
   color: hsla(0, 0%, 100%, 0.75);
-  line-height: 7px;
   font-family: 'Lexend Deca', sans-serif;
+  line-height: 1.75;
 }
 
 .underneath{
@@ -51,39 +56,58 @@ p{
   flex-direction: row;
   font-size: 12px;
   text-transform:uppercase;
+  letter-spacing: 2px;
+}
+
+.numbers{
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 8px;
+  display: block;
 }
 
 .stats{
   display: flex;
   justify-content: space-between;
-  line-height: 10px;
-  padding-left: 20px;
  margin-top: 75px; 
  list-style: none; 
- padding:0; 
- 
 }
 .image{
   background-color: hsl(277, 64%, 61%); 
-  background-size: cover;
-  border-bottom-right-radius: 10px;
-border-top-right-radius: 10px;
+  flex-basis: 45%;
 }
 img{
-display: flex;
-border-bottom-right-radius: 10px;
-border-top-right-radius: 10px;
+  display: block;
 mix-blend-mode: multiply;
 opacity: .75;
+object-fit: cover;
+width: 100%;
+height: 100%;
 }
 
-ul{
-  list-style: none;
-}
 
 .purple{
   color: hsl(277, 64%, 61%);
 }
 
 
+@media screen and (max-width: 768px) {
+  .container{
+    flex-direction: column-reverse;
+    width: 90%;
+  }
+  .image{
+    flex-basis: auto;
+  }
+  .left{
+    text-align: center;
+    flex-basis: auto;
+    padding-right: 64px;
+  }
+  .stats{
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    text-align: center;
+  }
 }
